--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 android.useAndroidX=true
 android.enableJetifier=true
+kapt.include.compile.classpath=false
