--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ android-gradle = "8.1.0-rc01"
 android-sdk-compile = "34"
 android-sdk-min = "21"
 android-sdk-target = "34"
+androidx-activity = "1.7.2"
 androidx-activity-compose = "1.7.2"
 androidx-compose = "1.5.0-beta03"
 androidx-compose-bom = "2023.06.01"
@@ -61,6 +62,7 @@ accompanist-placeholder = { module = "com.google.accompanist:accompanist-placeho
 accompanist-systemUiController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 android-desugarJdkLibs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "android-desugarJdkLibs" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
 androidx-compose-material-icons-core = { module = "androidx.compose.material:material-icons-core" }
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
