--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidx-compose-bom = "2023.06.01"
 androidx-compose-compiler = "1.4.8"
 androidx-compose-material3 = "1.2.0-alpha03"
 androidx-constraint-layout-compose = "1.0.1"
+androidx-core = "1.10.1"
 androidx-data-store = "1.1.0-alpha04"
 androidx-fragment = "1.6.0"
 androidx-hilt = "1.0.0"
@@ -71,6 +72,7 @@ androidx-compose-material3-windowSizeClass = { module = "androidx.compose.materi
 androidx-compose-uiTest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose" }
 androidx-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-constraintLayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "androidx-constraint-layout-compose" }
+androidx-core = { module = "androidx.core:core", version.ref = "androidx-core" }
 androidx-dataStore = { module = "androidx.datastore:datastore", version.ref = "androidx-data-store" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
